# AI-knowledge

./: .gitignore  AGENT_GUIDE.md  DESIGN.md  PROJECT.md  PROJECT_ANALYSIS.md  README.md  REVIEW_GUIDE.md  SETUP.md  app.py  commit.py  docker-compose.yml  embedder.py  pyproject.toml  requirements.txt  store.py  test_embed.py  test_simple.py
data/qdrant/: raft_state.json
drafts/: 20260105-00000_embedding-阻塞状态记录.md  20260501-060000_qdrant本地文件模式迁移与入库打通.md  20260505-161525_测试如何在-Python-中使用装饰器.md
drafts/_committed/: 20260501-030000_ai-knowledge-deploy-notes.md  20260501-040000_wsl卡死规避方案.md  20260501-050000_embedding依赖链路修复全记录.md
knowledge_mcp.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
scripts/: commit.py  reindex.py  sync_embed.py
src/: embedder.py  server.py  store.py
src/knowledge_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
static/: index.html
