[project]
name = "knowledge-mcp"
version = "0.1.0"
description = "Personal dev knowledge base with MCP interface"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "qdrant-client>=1.12.0",
    "FlagEmbedding>=1.2.10",
    "torch>=2.0.0",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.1.0",
]

[project.scripts]
knowledge-mcp = "src.server:main"
knowledge-commit = "scripts.commit:main"
knowledge-reindex = "scripts.reindex:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
